--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,23 @@
 # Server config
 server.address=localhost
 server.servlet.context-path=/demo
-spring.profiles.active=test
+server.port=8080
+# spring.profiles.active=test
 # 查看当前项目已启用和未启用的自动配置报告
-debug=true
+debug=false
 # http编码
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.force=true
 # Log config
 logging.level.root=info
+# bean
 test.name=axiba
 test.age=12
 test.address=beijing
+# ssl
+#server.ssl.key-store=.keystore
+#server.ssl.key-store-password=123456
+#server.ssl.key-store-type=JKS
+#server.ssl.key-alias=tomcat
+# favicon
+# spring.mvc.favicon.enabled=false
