--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,20 @@ test.address=beijing
 #server.ssl.key-alias=tomcat
 # favicon
 # spring.mvc.favicon.enabled=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=t187928L
+# 指定创建表的脚本
+#spring.datasource.schema=classpath:table.sql
+# 指定初始化数据库的脚本
+spring.datasource.data=classpath:data.sql
+# 指定初始化的模式(always 总是/)
+spring.datasource.initialization-mode=never
+# spring jpa
+# 启动后根据实体类来修改表结构
+spring.jpa.hibernate.ddl-auto=update
+# 控制台显示执行的sql
+spring.jpa.show-sql=true
+# 控制器(controller)返回的数据用json格式输出，更美观
+spring.jackson.serialization.indent-output=true
